Added material ui

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,9 @@
 {
   "home": {
     "heading": "Index page"
-  }
+  },
+  "about": "about",
+  "career": "career",
+  "portfolio": "portfolio",
+  "contact": "contact"
 }
