--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,5 +1,9 @@
 {
   "home": {
     "heading": "Домашняя страница"
-  }
+  },
+  "about": "обо мне",
+  "career": "карьера",
+  "portfolio": "портфолио",
+  "contact": "контакты"
 }
