Added about page

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,5 +18,6 @@
     "page-title": "contact",
     "title": "contact.",
     "description": "Feel free to contact me using any convenient way."
-  }
+  },
+  "search": "Search"
 }
