--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -18,5 +18,6 @@
     "page-title": "контакты",
     "title": "контакты.",
     "description": "Напиши мне любым удобным способом."
-  }
+  },
+  "search": "Поиск"
 }
